<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ciberchat.ciberchat.MainActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_username_label"
                android:textSize="20dp"
                android:layout_marginRight="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:text="@string/Your_Name_Goes_Here"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@drawable/layout_input_field"
                android:hint="@string/input_hint"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/search_input"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/search_btn_text"
                android:id="@+id/search_button"
                android:textSize="8dp"
                android:visibility="visible"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/search_exit"
                android:id="@+id/search_exit"
                android:textSize="8dp"
                android:visibility="gone"/>

        </LinearLayout>

        <ListView
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/messages_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:divider="@color/chatListDividerColor"
            android:visibility="visible"/>

        <ListView
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/found_messages_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:divider="@color/chatListDividerColor"
            android:visibility="gone"/>



        <LinearLayout
            android:id="@+id/input_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center">

            <EditText
                android:id="@+id/message_input"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="text"
                android:background="@drawable/layout_input_field"
                android:paddingLeft="10dp"/>

            <Button
                android:id="@+id/send_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:text="Send"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
